--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,6 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/menu-btn.js"></script>
     <script src="./index.js"></script>
-    <script src="./slider.js"></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
