--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
     />
   </head>
   <body>
-    <include src="./partials/header.html"></include>
+<!--    <include src="./partials/header.html"></include>-->
     <main>
-      <include src="./partials/hero.html"></include>
-      <include src="./partials/products.html"></include>
+      <!--<include src="./partials/hero.html"></include>
+      <include src="./partials/products.html"></include>-->
       <include src="./partials/him.html"></include>
-      <include src="./partials/slider.html"></include>
-      <include src="./partials/contacts.html"></include>
+<!--      <include src="./partials/slider.html"></include>-->
+<!--      <include src="./partials/contacts.html"></include>-->
     </main>
-    <include src="./partials/footer.html"></include>
+<!--    <include src="./partials/footer.html"></include>-->
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./js/menu-btn.js"></script>
     <script src="./index.js"></script>
