--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
-     Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл.
+<!--     Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл.-->
     <script src="./js/menu-btn.js"></script>
     <script src="./index.js"></script>
     <script src="./js/slider.js"></script>
