--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,8 @@
     <script src="./js/menu-btn.js"></script>
     <script src="./index.js"></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/product-btn.js"></script>
+    <script src="./js/product1-btn.js"></script>
+    <script src="./js/product2-btn.js"></script>
   </body>
 </html>
