--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,12 @@
       <include src="./partials/contacts.html"></include>
     </main>
     <include src="./partials/footer.html"></include>
-<!--     Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл.-->
-    <script src="./js/menu-btn.js"></script>
-    <script src="./index.js"></script>
-    <script src="./js/slider.js"></script>
-    <script src="./js/product-btn.js"></script>
-    <script src="./js/product1-btn.js"></script>
-    <script src="./js/product2-btn.js"></script>
+    <!--     Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл.-->
+    <script type="module" src="./index.js"></script>
+    <script type="module" src="./js/menu-btn.js"></script>
+    <script type="module" src="./js/slider.js"></script>
+    <script type="module" src="./js/product-btn.js"></script>
+    <script type="module" src="./js/product1-btn.js"></script>
+    <script type="module" src="./js/product2-btn.js"></script>
   </body>
 </html>
